Added Maven framework